fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  overflow-x: hidden ;
+}
+
 body {
   width: 100dvw;
   overflow-x: hidden;
   /* background-color: #dfdff0; */
-  background-color: #edffa4;
+  background-color: #fff;
   font-family: "General Sans", sans-serif;
     cursor: url("/cursor.svg") 0 0, auto;
 }
